@@ -1,3 +1,8 @@
+2001-03-06  Bruno Haible  <haible@clisp.cons.org>
+
+	* signed.m4: New file.
+	* Makefile.am (EXTRA_DIST): Add it.
+
 2001-03-03  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext.m4 (AM_WITH_NLS): Add $LIBICONV to $INTLLIBS.
